--- a/style.css
+++ b/style.css
@@ -1,3 +1,28 @@
+body{
+    font-size: 20px;
+    text-align: center;
+}
+
+h1{
+    margin: 0px;
+    padding: 10px;
+}
+
+.questions{
+    margin-bottom: 10px;
+}
+
+.answers {
+  margin-bottom: 20px;
+  text-align: left;
+  display: inline-block;
+}
+
+.answers label{
+  display: block;
+  margin-bottom: 10px;
+}
+
 .slide{
     position: absolute;
     left: 0px;
@@ -6,13 +31,15 @@
     z-index: 1;
     opacity: 0;
     transition: opacity 0.5s;
-  }
-  .active-slide{
+}
+
+.active-slide{
     opacity: 1;
     z-index: 2;
-  }
-  .quiz-container{
+}
+
+.quiz-container{
     position: relative;
     height: 200px;
     margin-top: 40px;
-  }
+}
